--- a/media/5books/001.md
+++ b/media/5books/001.md
@@ -38,4 +38,4 @@
 
 Шмараков Р.Л. *«Книжица наших забав»*. ОГИ, 2020.
 
-Прям вот совсем книжица. В средневековых текстах много историй. Того, что ещё в XIX веке назвали бы анекдотами (их ещё любили сборниками тематическими издавать в Европе), а сейчас и слова-то подходящего нет. Вот Шмараков (писатель и филолог) эти истории из текстов вычленил и пересказал современному читателю. Прелесть ещё и в том, что для сборника он выбрал ранее не издававшиеся на русском языке труды. Прелесть книги именно вот в этой средневековой анекдотичности.
+Прям вот совсем книжица. В средневековых текстах много историй. Того, что ещё в XIX веке назвали бы анекдотами (их ещё любили сборниками тематическими издавать в Европе), а сейчас и слова-то подходящего нет. Вот Шмараков (писатель и филолог) эти истории из текстов вычленил и пересказал современному читателю. Прелесть ещё и в том, что для сборника он выбрал ранее не издававшиеся на русском языке труды. Прелесть (прелесть прелестная прелестью и ещё разочек прелесть, чтобы наверняка) книги именно вот в этой средневековой анекдотичности.
